Adding persistent subscriptions through the MSR